changed uri to url, hopefully this fixes issue #9